test/speg_grammar_fixtures/valid/ordered_choice.peg
GRAMMAR url

test -> "begin" [0-9] "end";
other -> "A" / [0-9];
other_next -> "A" / [0-9] / "sdasda";
